# enigma2

./: .travis.yml  README.md  configure.ac  skin.py
data/rc_models/: Makefile.am  rc_models.cfg
lib/gdi/: font.cpp
lib/python/Components/: Network.py
lib/python/Plugins/Extensions/: Makefile.am
lib/python/Plugins/Extensions/SoftcamPanel/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/SoftcamPanel/meta/: Makefile.am  plugin_softcampanel.xml
lib/python/Plugins/SystemPlugins/: Makefile.am
lib/python/Plugins/SystemPlugins/Softcam-Panel/: SoftcamPanel.py  plugin.py
lib/python/Plugins/SystemPlugins/SoftcamPanel/: Makefile.am  SoftcamPanel.xml
lib/python/Screens/: SkinSelector.py
